Update to 3.6.5 Uses internal libcharls as upstream API  differs

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "dcmtk-3.6.0.tar.gz": 469e017cffc56f36e834aa19c8612111f964f757
+  dcmtk-3.6.5.tar.gz: 491f7c206f1ed746634af3062b6b791519b13dab
